# mixed-precision-ir

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md
.github/workflows/: cmake.yml
src/: CMakeLists.txt  main.cpp  mpir.hpp  semver.cpp
src/app/: CMakeLists.txt  areals.cpp  fixpnts.cpp  integers.cpp
src/luir/: CMakeLists.txt  configs.hpp  luir.cpp
src/mtl4/generators/: matrix_generators.hpp
src/multifile/: CMakeLists.txt  cfloats.cpp  logs.cpp  main.cpp  posits.cpp  unums.cpp
src/quadratic/: CMakeLists.txt  quadratic.cpp
src/solvers/: CMakeLists.txt  gauss_jordan.cpp
src/universal/: CMakeLists.txt  main.cpp
src/version/: CMakeLists.txt  version.cpp  version.hpp
test/: CMakeLists.txt
test/src/: mpir_tests.cpp
